--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="body">
     <div class="btn-content">
          <button class="btn">Click to toggle popover</button>
     </div>
